# bool-to-bitflags

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md
.github/workflows/: ci.yml
src/: args.rs  derive_hijack.rs  error.rs  impl.rs  impl_from_into.rs  impl_get_set.rs  lib.rs  strip_spans.rs
tests/: basic.rs  configuration.rs  doc_fields.rs  guarded_flag.rs  many.rs  non_copy.rs  opt_bool.rs  owning_self.rs  serde.rs  serde_default.rs
