[package]
name = "bool_to_bitflags"
description = "A library to compact multiple bools into a single bitflags field automatically with getters and setters."
repository = "https://github.com/GnomedDev/bool-to-bitflags"
rust-version = "1.65"
version = "0.1.1"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "extra-traits"] }
darling = "0.20.3"
to-arraystring = "0.1.3"

procout = { version = "0.1.13", features = ["procout"], optional = true }

[dev-dependencies]
typesize = "0.1"
bitflags = "2.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[features]
procout = ["dep:procout"]
typesize = []
